--- a/views/login/index.hbs
+++ b/views/login/index.hbs
@@ -12,7 +12,7 @@
          <h2 class="Text4">Crea una cuenta</h2>
          <form class="Form" action="" method="post" id="Formulario">
             <input type="text" name="Email" style="outline: none;" class="Email" placeholder=" Correo electrónico" required>
-            <input type="text" name="Clave" class="Contraseña" placeholder=" Contraseña">
+            <input type="password" name="Clave" class="Contraseña" placeholder=" Contraseña">
             <input type="submit" class="Registarse">
             <a href="/register" class="Login">Crea una cuenta</a>
             {{#if error}}
