--- a/views/login/register.hbs
+++ b/views/login/register.hbs
@@ -4,7 +4,7 @@
          <form class="Form" action="" id="Formulario" method="POST">
             <input type="text" name="Usuario" class="Usuario" placeholder=" Usuario" required>
             <input type="text" name="Email" style="outline: none;" class="Email" placeholder=" Correo electrónico" required>
-            <input type="text" name="Clave" class="Contraseña" placeholder=" Contraseña" required>
+            <input type="password" name="Clave" class="Contraseña" placeholder=" Contraseña" required>
             <button type="submit" class="Registarse">Registrarse</button>
             <a href="/login" class="Login">¿Ya tienes una cuenta?</a>
          </form>
