--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jobly</title>
     <link rel="stylesheet" href="https://syxlordz.github.io/Jobly/style.css">
+    <link rel="icon" href="https://syxlordz.github.io/Jobly/26%20sept%202023%20a%20la(s)%2017_15.png">
 </head>
 <body>
     {{{body}}}
